# GPT-NeoX-Colab

./: .env  .gitignore  .venv.dvc  .venv.tar.gz.dvc  README.md  README_DEV.md  data.dvc  dvc.yaml  ideas.md  models.dvc  my_env.tar.gz.dvc  notebook1task.md  notebook2task.md  notes.md  pyproject.toml  requirements  requirements.txt  requirements_colab.txt  setup.py  taskNotebook2.md  taskTokenizer.md
.devcontainer/: Dockerfile  devcontainer.json
.dvc/: config
configs/: CC19M.yml  cc_setup.yml  codecompletion.yml  hydra.yaml  shakespeare.yml  shakespeare_deepy.yml  shakespeare_gen.yml  text_generation.yml
configs/experiments/: experiment1.yaml  experiment2.yaml  experiment3.yaml
dagshub/: .gitignore  experiment.py  model.py  train.py
dagshub/configs/: config.yaml
dagshub/configs/experiment/: experiment1.yaml  experiment2.yaml
dagshub/src/: dagshub_mlflow_hypster_demo.py  lightning_train.py
data/: .gitignore  shakespeare.jsonl  shakespeare.txt  shakespeare_text_document.idx
data/shakespeare/: shakespeare.jsonl  shakespeare.txt  shakespeare_text_document.idx
experiments/outputs/: experiment1.yaml
notebooks/: 5M.yml  TinyLlama_Method1.ipynb  codecompletion_benchmark.ipynb  codecompletion_inference.ipynb  codecompletion_training.ipynb  nanogpt5M_neox_3_10.ipynb  nanogpt_neox.ipynb  nanogpt_neox_3_10.ipynb  neox1.ipynb  neox_failing_python3.10.ipynb  neox_python3.8.ipynb  py150_gpt.ipynb  py150_gpt_updated.ipynb  py150_gpt_updated_mark.ipynb  py150_gpt_updated_syed.ipynb  shakespeare_basic.ipynb  shakespeare_experiment.ipynb  shakespeare_experiment1.ipynb  shakespeare_inference.ipynb  shakespeare_training.ipynb  shakespeare_trainingV2.ipynb
scripts/: evaluator.py  not_activating.sh  postCreateCommand.py  postCreateCommand.sh
src/GPTNeoXColab/: CharLevelTokenizer.py  __init__.py  greet.py  utils.py  utilsColab.py
src/GPTNeoXColab/utils/: __init__.py  colab.py  ml.py
src/gpt_neox_colab/: __init__.py  evaluate_benchmark.py
src/gpt_neox_colab/utils/: colab.py  ml.py
test/: test_greet.py
tests/: test_greet.py
