[project]
name = "gtpneoxcolab"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Your Name", email = "your_email@example.com"},
]
dependencies = [
    "torch==2.3.0",
    "torchaudio==2.3.0",
    "torchvision==0.18.0",
    "transformers==4.38.0",
    "sentence-transformers==2.2.2",
    "tiktoken",
    "blobfile",
    "dagshub",
    "hydra-core",
    "python-dotenv",
    "tensorboard",
    "boto3",
    "dvc[s3]",
    "mlflow",
    "humanize",
    "GPTNeoXColab @ file:///${PROJECT_ROOT}/"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
